--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ export(MCUFD_plot)
 export(PCA)
 export(bootstrap_LDA)
 export(codonFreq)
+export(codonPlot)
 export(getFreqs)
 export(normalise)
 export(nseq)
-export(plot)
 export(predict_LDA)
 export(predict_PCA)
 export(readSeq)
@@ -25,9 +25,9 @@ exportMethods(MCUFD_plot)
 exportMethods(PCA)
 exportMethods(biasPlot)
 exportMethods(bootstrap_LDA)
+exportMethods(codonPlot)
 exportMethods(gcPlot)
 exportMethods(normalise)
-exportMethods(plot)
 exportMethods(predict_LDA)
 exportMethods(predict_PCA)
 exportMethods(show)
