--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportMethods(normalise)
 exportMethods(predict_LDA)
 exportMethods(predict_PCA)
 exportMethods(show)
+import(Biostrings)
 import(MASS)
 import(RColorBrewer)
 import(caret)
@@ -42,6 +43,3 @@ import(methods)
 import(reshape2)
 import(scales)
 import(stringr)
-importFrom(Biostrings,readDNAStringSet)
-importFrom(Biostrings,trinucleotideFrequency)
-importFrom(Biostrings,width)
