Update NAMESPACE function imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,3 +43,15 @@ import(methods)
 import(reshape2)
 import(scales)
 import(stringr)
+importFrom(grDevices,nclass.FD)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,cor)
+importFrom(stats,fisher.test)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stats,prcomp)
+importFrom(stats,predict)
+importFrom(stats,var)
+importFrom(utils,write.table)
