Change package imports to function imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,8 +31,6 @@ exportMethods(normalise)
 exportMethods(predict_LDA)
 exportMethods(predict_PCA)
 exportMethods(show)
-import(Biostrings)
-import(MASS)
 import(RColorBrewer)
 import(caret)
 import(dplyr)
@@ -43,6 +41,10 @@ import(methods)
 import(reshape2)
 import(scales)
 import(stringr)
+importFrom(BiocGenerics,width)
+importFrom(Biostrings,readDNAStringSet)
+importFrom(Biostrings,trinucleotideFrequency)
+importFrom(MASS,lda)
 importFrom(grDevices,nclass.FD)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
