Specify functional call to lda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ import(scales)
 import(stringr)
 importFrom(Biostrings,readDNAStringSet)
 importFrom(Biostrings,trinucleotideFrequency)
+importFrom(Biostrings,width)
 importFrom(MASS,lda)
 importFrom(grDevices,nclass.FD)
 importFrom(stats,as.formula)
