--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ exportMethods(predict_PCA)
 exportMethods(show)
 import(RColorBrewer)
 import(caret)
+import(devtools)
 import(dplyr)
 import(e1071)
 import(ggbiplot)
