--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,6 @@ exportMethods(predict_PCA)
 exportMethods(show)
 import(RColorBrewer)
 import(caret)
-import(devtools)
 import(dplyr)
 import(e1071)
 import(ggbiplot)
@@ -46,6 +45,7 @@ importFrom(Biostrings,readDNAStringSet)
 importFrom(Biostrings,trinucleotideFrequency)
 importFrom(Biostrings,width)
 importFrom(MASS,lda)
+importFrom(factoextra,get_pca_var)
 importFrom(grDevices,nclass.FD)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
